--- a/src/components/each goal/eachgoal.style.scss
+++ b/src/components/each goal/eachgoal.style.scss
@@ -5,7 +5,7 @@
     align-items: start;
     margin-top: .5em;
 
-    div {
+    & > div {
         background-color: var(--background-color-2);
         padding: 1em;
         border-radius: .5em;
@@ -20,9 +20,74 @@
             opacity: 1;
             transform: translateY(3px);
         }
+
+        div {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 1px rgba(0, 0, 0, 0.256);
+            border-radius: .5em;
+            padding: 1em;
+            margin-bottom: 1em;
+            gap: 1em;
+
+            h2 {
+                display: -webkit-box;
+                -webkit-line-clamp: 1;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+            .small {
+                font-size: 16px;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+
+            .date {
+                font-size: 14px;
+                display: flex;
+                align-items: center;
+                gap: 1em;
+            }
+
+            @media (max-width: 992px) {
+                h2 {
+                    font-size: 20px;
+                }
+
+                .date {
+                    gap: .5em;
+                }
+            }
+
+            @media (max-width: 768px) {
+                h2 {
+                    font-size: 16px;
+                }
+                .date {
+                    font-size: 12px;
+                    gap: .3em;
+                }
+            }
+        }
+
+        @media (max-width: 768px) {
+            padding: .5em;
+        }
+
+        
     }
 
     .completed {
         background-color: rgba(0, 128, 0, 0.414);
+    }
+
+    @media (max-width: 1129px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 768px) {
+        grid-template-columns: 1fr;
     }
 }
