--- a/src/page/Goal/Goal.style.scss
+++ b/src/page/Goal/Goal.style.scss
@@ -5,8 +5,14 @@
     width: calc(100% - 200px);
     height: auto;
     padding: 2em;
+    transition: .3s;
 
     h1 {
         margin-top: 1em;
+    }
+
+    @media (max-width: 768px) {
+        width: 100%;
+        padding: 1em;
     }
 }
