--- a/src/components/each goal/eachgoal.style.scss
+++ b/src/components/each goal/eachgoal.style.scss
@@ -87,7 +87,15 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
+    @media (max-width: 992px) {
+        grid-template-columns: 1fr;
+    }
+
     @media (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 576px) {
         grid-template-columns: 1fr;
     }
 }
