--- a/src/components/Intro/intro.style.scss
+++ b/src/components/Intro/intro.style.scss
@@ -23,4 +23,14 @@
             background-color: var(--primary-color);
         }
     }
+
+    @media (max-width: 576px) {
+        h1 {
+            font-size: 24px;
+        }
+        p {
+            padding: 1em;
+            font-size: 14px;
+        }
+    }
 }
