--- a/src/components/user/user.style.scss
+++ b/src/components/user/user.style.scss
@@ -3,9 +3,20 @@
     align-items: center;
     gap: .5em;
 
-    img {
-        width: 50px;
-        border-radius: 50%;
+    div:nth-of-type(1) {
+        position: relative;
+
+        .skeleton {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        img {
+            width: 50px;
+            border-radius: 50%;
+        }
     }
 
     div {
