--- a/src/components/Intro/intro.style.scss
+++ b/src/components/Intro/intro.style.scss
@@ -24,13 +24,28 @@
         }
     }
 
+    @media (max-width: 1129px) {
+        h1 {
+            font-size: 48px;
+        }
+    }
+
+    @media (max-width: 992px) {
+        h1 {
+            font-size: 32px;
+        }
+        p {
+            padding: 1em;
+        }
+    }
+
     @media (max-width: 576px) {
         h1 {
             font-size: 24px;
         }
         p {
             padding: 1em;
-            font-size: 14px;
+            font-size: 12px;
         }
     }
 }
