--- a/src/page/Goal/Goal.style.scss
+++ b/src/page/Goal/Goal.style.scss
@@ -5,7 +5,7 @@
     width: calc(100% - 200px);
     height: auto;
     padding: 2em;
-    transition: .3s;
+    transition: width .3s, padding .3s;
 
     h1 {
         margin-top: 1em;
