--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -5,6 +5,7 @@ header {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
+    overflow: hidden;
 
     @media (min-width: 1500px) {
         max-width: 1500px;
@@ -15,16 +16,25 @@ header {
         h1 {
             font-size: 52px;
             font-weight: bolder;
+            opacity: 0;
+            transform: translateX(-100px);
         }
 
         p {
             margin-bottom: 1em;
+            opacity: 0;
+            transform: translateX(-100px);
 
             a {
                 color: var(--primary-color);
                 font-weight: 500;
                 text-decoration: 1px underline var(--primary-color);
             }
+        }
+
+        .button {
+            opacity: 0;
+            transform: translateX(-100px);
         }
 
         @media (max-width: 992px) {
@@ -52,6 +62,10 @@ header {
         }
     }
 
+    .headerSVG {
+        opacity: 0;
+        transform: scale(1.4);
+    }
 
     @media (max-width: 768px) {
         height: auto;
