Brought some changes

--- a/src/components/NavbarContributor/NavbarContributor.style.scss
+++ b/src/components/NavbarContributor/NavbarContributor.style.scss
@@ -43,7 +43,7 @@ nav {
                     border-radius: 50%;
                 }
 
-                span {
+                .contributorNum {
                     opacity: 0;
                     position: absolute;
                     top: 50%;
