--- a/src/page/Goal/Goal.style.scss
+++ b/src/page/Goal/Goal.style.scss
@@ -24,7 +24,7 @@
         width: 100%;
         height: 100vh;
         background-color: rgba(0, 0, 0, 0.278);
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         display: none;
