--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-background text-white;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+}
+
+#userImage::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border: 2px dashed #0099ff;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scale(1.2);
+  animation: userImage 5s infinite linear;
+  transition: 0.3s;
+}
+
+@keyframes userImage {
+  from {
+    transform: rotate(0deg) scale(1.2);
+  }
+  to {
+    transform: rotate(360deg) scale(1.2);
+  }
+}
+
+#userImage:hover::after {
+  transform: scale(1.3);
+  animation: none;
+  border-color: #005c99;
+}
