Done with getstarted section

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  height: 100%;
+}
+
 body {
-  @apply bg-background text-white dark:bg-white dark:text-black;
+  @apply relative min-h-full pb-12 bg-background text-white dark:bg-white dark:text-black;
   font-family: "Roboto", sans-serif;
 }
 
